# tr3_essentials

./: .gitignore  LICENSE  README.md
tr3_description/: CMakeLists.txt  package.xml  urdf.rviz
tr3_description/launch/: tr3_xacro.launch
tr3_description/meshes/dae/: tr-bs-a.dae  xt-hd-b.dae  xt-lg-a.dae  xt-lg-b.dae  xt-lg-c.dae  xt-sm-a.dae  xt-sm-b.dae  xt-sm-c.dae
tr3_description/meshes/stl/: tr-bs-a.stl  tr-bs-b.stl  tr-bs-c.stl  xt-gp-a.stl  xt-hd-a.stl  xt-lg-b.stl  xt-lg-c.stl  xt-sm-a.stl  xt-sm-b.stl  xt-sm-c.stl  xt-wl-a.stl
tr3_description/robots/: tr3.urdf.xacro
tr3_description/urdf/arm/: arm.gazebo.xacro  arm.macros.xacro  arm.transmission.xacro  arm.urdf.xacro
tr3_description/urdf/base/: base.gazebo.xacro  base.transmission.xacro  base.urdf.xacro
tr3_description/urdf/head/: head.gazebo.xacro  head.transmission.xacro  head.urdf.xacro
tr3_embedded/: README.md  workspace.code-workspace
tr3_embedded/Actuator_v3/: .gitignore  Actuator_v3.ino  Controller.h  ControllerState.h  Encoder.h  MPU9250.cpp  MPU9250.h  Motor.h  Network.h  PID.h  Regression.h  Storage.h
tr3_embedded/Actuator_v3/src/: Actuator_v3.cpp  Config.h  Controller.cmds.cpp  Controller.h  Controller.setup.cpp  Controller.step.cpp  Controller.utils.cpp  Dynamics.h  Encoder.h  LED.h  MPU9250.cpp  MPU9250.h  NetworkPacket.h  PID.h  RosHandle.h  RosHandleEvents.h  Storage.h  Trajectory.h  Utils.h  main.cpp
tr3_embedded/BatteryPack_v1/: BatteryPack_v1.ino  Controller.h  ControllerState.h  Network.h
tr3_embedded/BatteryPack_v1/src/: Config.h  Controller.h  main.cpp
tr3_embedded/PowerDistribution_v1/: Controller.h  ControllerState.h  LED.h  Network.h  NetworkPacket.h  PowerDistribution_v1.ino  Timer.h  platformio.ini
tr3_embedded/PowerDistribution_v1/src/: Config.h  Controller.h  RosHandle.h  RosHandleEvents.h  main.cpp
tr3_embedded/tr.libs/AMS_AS5048b/: ams_as5048b.cpp  ams_as5048b.h
tr3_embedded/tr.libs/Config/: Config.h
tr3_embedded/tr.libs/ConfigTemplate/: ConfigTemplate.h
tr3_embedded/tr.libs/ControllerState/: ControllerState.h
tr3_embedded/tr.libs/Defaults/: Defaults.h
tr3_embedded/tr.libs/Encoder/: Encoder.h
tr3_embedded/tr.libs/LED/: LED.h
tr3_embedded/tr.libs/LinearRegression/: LinearRegression.cpp  LinearRegression.h
tr3_embedded/tr.libs/Motor/: Motor.h
tr3_embedded/tr.libs/Network/: Network.h
tr3_embedded/tr.libs/NetworkPacket/: NetworkPacket.h
tr3_embedded/tr.libs/PID/: PID.h
tr3_embedded/tr.libs/RosHandleBase/: RosHandleBase.h
tr3_embedded/tr.libs/Storage/: Storage.h
tr3_gazebo/: CMakeLists.txt  README.md  package.xml
tr3_gazebo/config/: controllers_sim.yaml  gazebo_ros_control.yaml  hardware.yaml  joint_limits.yaml
tr3_gazebo/launch/: tr3_gazebo.launch  tr3_sim.launch
tr3_hardware_interface/: CMakeLists.txt  package.xml
tr3_hardware_interface/config/: controllers.yaml
tr3_hardware_interface/include/tr3_hardware_interface/: tr3_hardware.h  tr3_hardware_interface.h
tr3_hardware_interface/launch/: tr3_effort_controllers.launch  tr3_position_controllers.launch  tr3_position_trajectory_controllers.launch  tr3_sim.launch
tr3_hardware_interface/src/: tr3_hardware_interface.cpp  tr3_hardware_interface_node.cpp
tr3_jetson_setup/: install_tr3_nano.bash
tr3_keyboard_teleop/: CMakeLists.txt  README.md  package.xml  setup.py
tr3_keyboard_teleop/launch/: tr3_keyboard_teleop.launch
tr3_keyboard_teleop/src/: tr3_keyboard_teleop.py
tr3_moveit/: .setup_assistant  CMakeLists.txt  package.xml
tr3_moveit/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  tr3.srdf
tr3_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ik_services.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  tr3_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
tr3_moveit/src/: forward_ik_server.cpp  inverse_ik_server.cpp
tr3_msgs/: CMakeLists.txt  package.xml
tr3_msgs/msg/: ActuatorPositionCommand.msg  ActuatorState.msg
tr3_msgs/srv/: ForwardIK.srv  InverseIK.srv
tr3_navigation/: CMakeLists.txt  package.xml  setup.py
tr3_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  navfn_global_planner_params.yaml  rplidar_filter_config.yaml
tr3_navigation/launch/: cloud_transformer.launch  navigation.launch  tr3_navigation.launch
tr3_navigation/src/: cloud_transformer.py  navigation.py  tr3_cmd_map.py  tr3_tf_broadcaster.py
tr3_navigation/src/tr3_navigation/: __init__.py  cloud_transformer.py  routine_avoid_obstacle.py  routine_close_call.py  routine_collision.py  routine_go_to_goal.py
tr3_os/: .gitignore  CMakeLists.txt  README.md  package.xml
tr3_os/launch/: tr3_os.launch
tr3_os/src/: index.js  package.json
tr3_setup/: install_desktop.bash  install_jetson_nano.bash
tr3cpp/: CMakeLists.txt  package.xml
tr3cpp/include/tr3cpp/: Socket.tpp  joint.h  msg.h  msgs.h  packet.h  tr3.h
tr3cpp/src/: Protocol.cpp  ProtocolSimple.cpp  Socket.cpp
tr3cpp/src/tr3cpp/: joint.cpp  tr3.cpp
tr3py/: CMakeLists.txt  package.xml  setup.py
tr3py/launch/: rosserial.launch  tr3_hello_world.launch  tr3_hello_world_sim.launch  tr3_node.launch
tr3py/src/: tr3_action_server.py  tr3_hello_world.py  tr3_hello_world_sim.py
tr3py/src/tr3py/: .tr2_node.py.swp  __init__.py  tr3.py  tr3_config_default.yaml  tr3_forward_ik.py  tr3_joint.py  tr3_joint_sim.py  tr3_msgs.py  tr3_network.py  tr3_node.py  tr3_sim.py  tr3_tasks.py  tr3_utils.py
(+230 files in other folders)
