<?xml version="1.0"?>
<package format="2">
  <name>tr3_navigation</name>
  <version>0.0.0</version>
  <description>The tr3_navigation package</description>

  <maintainer email="zach@todo.todo">zach</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>move_base</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tr3py</build_depend>
  <build_export_depend>move_base</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>ros_numpy</exec_depend>
  <exec_depend>tr3py</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
